# goit-pyweb-hw-19

./: .gitignore  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 9b534803c18b_init.py
src/conf/: config.ini.example  config.py  connect_settings.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  phones.py  searchs.py
src/routes/: contacts.py  phones.py  searchs.py
src/schemas/: contacts.py
