[project]
name = "goit-pyweb-hw-19"
version = "0.1.0"
description = ""
authors = [
    {name = "Bomber99-debug",email = "68162111+Bomber99-debug@users.noreply.github.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "uvicorn (>=0.51.0,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
